2014-12-22

	* scripts/paxmark.sh: remove erroneous elog functions
	* scripts/paxmark.sh: source /etc/portage/make.conf for PAX_MARKINGS
	and correct logic to default to PT only if no PAX_MARKINGS are set.
	Reported by Karl-Johan Karlsson <creideiki+gentoo-hardened@ferretporn.se>

2014-10-03

	* scripts/paxmark.sh: backport improvements from pax-utils.eclass
	* configure.ac: remove bash-isms
	See: https://bugs.gentoo.org/525240

2014-07-30

	* Build fix-gnustack conditionally on --enable-ptpax to avoid dependancy
	on elfutils or libelf when it needed for fix-gnustack but not paxctl-ng.
	The future solution will be break out fix-gnustack.
	See: https://bugs.gentoo.org/518524

2014-06-07

	* Switch from error() to errx() in fix-gnustack.c and paxctl-ng.c to
	make the code portable to musl (and BSD).

2014-05-31

	* Remove check from install-xattr which is messing up portage's install
	wrapper.  See https://bugs.gentoo.org/511984

2014-05-27

	* Added ldd.py, a clone of ldd built on top of pyelftools

2014-01-08

	* Added install.wrapper.c for https://bugs.gentoo.org/465000

2013-09-26

	* Return EXIT_SUCCESS if user.pax.flags is done after paxctl-ng -d.  This
	addresses https://bugs.gentoo.org/485908

2013-05-20

	* Bump to automake 1.12
	* Add check if ELF_C_RDWR_MMAP is declared in libelf.h.  This distinguishes
	elfutils from libelf.  The former will not build on uclibc, but the laster
	does not provide ELF_C_RDWR_MMAP.
	* Clean up the tests so they work for all combinations of --{en,dis}able-{pt,xt}pax
	* Add a bash utility, paxmark.sh, which does PaX marking like the eclass.  This is for
	build systems that do PaX marking during the build.

2012-12-28

	* src/paxctl-ng.c: -L/-l alone report if PT_PAX/XATTR_PAX is supported.
	* Use NEEDED.ELF.2 for revdep-pax and migrate-pax

2012-12-26

	* Fix the flag logic on paxctl-ng and clean up documenation
	* Encapsulate all forward/reverse linkings in class LinkMap in link_map.py